languages/montiarc-fe/src/test/resources/contextconditions/invalid/AutomatonReactionWithAlternatives.arc
package contextconditions.invalid;


component AutomatonReactionWithAlternatives{

port in int i,
     out int a;

automaton AutomatonReactionWithAlternatives {



	state Idle;
	initial Idle / {a = alt{1,2,3}};

}

}